# vec01

./: .clangd  .gitignore  CMakeLists.txt  README.md
assets/shaders/: lines.vs.glsl  simple.fs.glsl  simple.vs.glsl
include/: array.h  buffer.h  camera.h  list.h  model.h  model_square.h  shader.h  test.h  wavefront.h
main/: CMakeLists.txt  main.c
src/: CMakeLists.txt  test.c
